--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+#Alternate default index pages
+DirectoryIndex index.html index.php
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
