--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-php_value open_basedir "/var/www/vhosts/ve.ivao.aero/:/tmp/"
+#php_value open_basedir "/var/www/vhosts/ve.ivao.aero/:/tmp/"
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
