--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
-#php_value open_basedir "/var/www/vhosts/ve.ivao.aero/:/tmp/"
-
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
@@ -8,14 +6,14 @@
     #previously this would not have been possible.
     #'system' can be replaced if you have renamed your system folder.
     RewriteCond %{REQUEST_URI} ^system.*
-    RewriteRule ^(.*)$ index.php?/$1 [L]
+    RewriteRule ^(.*)$ app_start.php?/$1 [L]
 
     #When your application folder isn't in the system folder
     #This snippet prevents user access to the application folder
     #Submitted by: Fabdrol
     #Rename 'application' to your applications folder name.
     RewriteCond %{REQUEST_URI} ^application.*
-    RewriteRule ^(.*)$ index.php?/$1 [L]
+    RewriteRule ^(.*)$ app_start.php?/$1 [L]
 
     #Checks to see if the user is attempting to access a valid file,
     #such as an image or css document, if this isn't true it sends the
@@ -23,7 +21,7 @@
     #RewriteCond %{ENV:REDIRECT_STATUS} ^$
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?/$1 [L]
+    RewriteRule ^(.*)$ app_start.php?/$1 [L]
 
 
     </IfModule>
@@ -33,5 +31,5 @@
         # can be sent to index.php, and everything works as normal.
         # Submitted by: ElliotHaughin
 
-    ErrorDocument 404 /index.php
+    ErrorDocument 404 /app_start.php
 </IfModule>
